root/iptables-save-recent
# Generated by iptables-save v1.4.14 on Sun Feb 22 10:15:54 2015
*filter
:INPUT ACCEPT [5546962:232990556]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [5572063:242386970]
:EXTERN - [0:0]
:RATELIMIT - [0:0]
:SLOW - [0:0]
-A INPUT -m recent --update --name fail2ban-fail2ban --rsource -j DROP
-A INPUT -m recent --update --seconds 3600 --name fail2ban-ssh --rsource -j DROP
-A INPUT -i eth0 -j EXTERN
-A EXTERN -m state --state RELATED,ESTABLISHED -j ACCEPT
-A EXTERN -m comment --comment "all new connections"
-A EXTERN ! -p tcp -j DROP
-A EXTERN -m comment --comment "new tcp connections"
-A EXTERN -m set --match-set china src -j DROP
-A EXTERN -p tcp -m multiport --dports 443 -j ACCEPT
-A EXTERN -p tcp -m multiport --dports 22,443 -j RATELIMIT
-A EXTERN -m comment --comment "tcp service closed" -j DROP
-A RATELIMIT -m recent --update --seconds 2160 --hitcount 18 --name DEFAULT --rsource -j DROP
-A RATELIMIT -m recent --update --seconds 60 --hitcount 3 --name DEFAULT --rsource -j DROP
-A RATELIMIT -j SLOW
-A RATELIMIT -m recent --rcheck --seconds 3600 --hitcount 3 --name SLOW --rsource
-A RATELIMIT -m recent --set --name DEFAULT --rsource -j ACCEPT
-A SLOW -m recent --rcheck --seconds 120 --name SLOW --rsource -j RETURN
-A SLOW -m recent --set --name SLOW --rsource -j RETURN
COMMIT
# Completed on Sun Feb 22 10:15:54 2015
