root/iptables-save-recent-neu
# Generated by iptables-save v1.4.14 on Sun Feb 22 13:41:03 2015
*filter
:INPUT ACCEPT [3316668:139314077]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [3334975:145380381]
:BAN - [0:0]
:EXTERN - [0:0]
:RATELIMIT - [0:0]
-A INPUT -i eth0 -j EXTERN
-A BAN -m recent --set --name BANNED --rsource
-A BAN -m recent --remove --name DEFAULT --rsource -j DROP
-A EXTERN -m state --state RELATED,ESTABLISHED -j ACCEPT
-A EXTERN -m comment --comment "all new connections"
-A EXTERN ! -p tcp -j DROP
-A EXTERN -m comment --comment "new tcp connections"
-A EXTERN -m set --match-set china src
-A EXTERN -p tcp -m multiport --dports 443 -j ACCEPT
-A EXTERN -p tcp -m multiport --dports 22,443 -j RATELIMIT
-A EXTERN -m comment --comment "tcp service closed" -j DROP
-A RATELIMIT -m recent --update --name BANNED --rsource -j DROP
-A RATELIMIT -m recent --update --hitcount 6 --name DEFAULT --rsource -j BAN
-A RATELIMIT -m recent --set --name DEFAULT --rsource -j ACCEPT
COMMIT
# Completed on Sun Feb 22 13:41:03 2015
